# Motor-Grafico

./: .gitignore  LICENCE.md  README.md  SDL3_LICENSE
Engine/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  helloworld.cpp  vcpkg.json
Engine/FBX/: Scene.txt  Table.fbx  street2.FBX
Engine/Images/.mayaSwatches/: Baker_house.png_hcm.swatch
Engine/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.h  ComponentMesh.cpp  ComponentMesh.h  ComponentTransform.cpp  ComponentTransform.h  Frustum.h  GameObject.cpp  GameObject.h  ImGuiFileDialog.cpp  Input.cpp  Input.h  LineSegment.h  Menus.cpp  Menus.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Module.h  OctreeNode.cpp  OctreeNode.h  Render.cpp  Render.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SimulationController.cpp  SimulationController.h  Texture.cpp  Texture.h  Time.cpp  Time.h  Window.cpp  (+2 more)
Licences/: DEVIL_LICENCE  OPENGL_LICENCE
